--- a/app/components/main.hbs
+++ b/app/components/main.hbs
@@ -1,5 +1,4 @@
 <h2 id="yes-list">👍 Yes:</h2>
-<h3 id="yes-keypress">Testing "keyup" variations</h3>
 <ol>
     <li>
         <p>Syntax: <code>&lt;Input &#123;&#123;on "keyup" this.someAction&#125;&#125; /&gt;</code></p>
@@ -12,26 +11,20 @@
         <label for="at-keyup-cc">Event is @keyUp</label>
         <Input @keyUp={{this.updateName}} id="at-keyup-cc" />
     </li>
-</ol>
-<h3 id="yes-keydown">Testing "keydown" variations</h3>
-<ol>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="on-keydown">Event is on keydown</label>
-        <Input @type="text" {{on "keydown" this.updateName}} id="on-keydown" />
+        <Input  {{on "keydown" this.updateName}} id="on-keydown" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="at-keydown-cc">Event is @keyDown</label>
-        <Input @type="text" @keyDown={{this.updateName}} id="at-keydown-cc" />
+        <Input  @keyDown={{this.updateName}} id="at-keydown-cc" />
     </li>
-</ol>
-<h3 id="yes-enter">Testing enter variations</h3>
-<ol>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="at-enter-action">Event is @enter + action</label>
-        <Input @type="text" @enter={{action "updateName"}} id="at-enter-action" />
+        <Input  @enter={{action "updateName"}} id="at-enter-action" />
     </li>
     <li>
         <p>Syntax:<code>&#123;&#123;input enter=(action "updateName")&#125;&#125;</code></p>
@@ -39,8 +32,6 @@
         <label for="enter-action">event is enter plus action</label>
         {{input enter=(action "updateName") id="firstname-action-017b"}}
     </li>
-</ol>
-<ol>
     <li>
         {{!-- works --}}
         <label for="at-insertnewline-cc">Event is @insertNewLine</label>
@@ -53,28 +44,22 @@
     </li>
     <li>
         {{!-- works --}}
-        <label for="firstname-at-021">First Name At focusOut</label>
-        <Input @focusOut={{this.updateName}} id="firstname-at-021" />
+        <label for="at-focusout-cc">Event is @focusOut</label>
+        <Input @focusOut={{this.updateName}} id="at-focusout-cc" />
     </li>
     <li>
         {{!-- works --}}
-        <label for="firstname-at-022">First Name At keyPress</label>
-        <Input @keyPress={{this.updateName}} id="firstname-at-022" />
+        <label for="at-keypress-cc">Event is @keyPress</label>
+        <Input @keyPress={{this.updateName}} id="at-keypress-cc" />
     </li>
     <li>
         {{!-- works --}}
-        <label for="firstname-at-023">First Name At keyUp</label>
-        <Input @type="text" @keyUp={{this.updateName}} id="firstname-at-023" />
-    </li>
-    <li>
-        {{!-- works --}}
-        <label for="firstname-action-019b">First Name Action 19 escape dash press</label>
-        <Input @type="text" @escape-press={{action "updateName"}} id="firstname-action-019b" />
+        <label for="at-escape-press-plus-action">Event is @escape-press</label>
+        <Input @escape-press={{action "updateName"}} id="at-escape-press-plus-action" />
     </li>
 </ol>
 
 <h2 id="no-list">👎 No:</h2>
-<h3 id="no-keyup">Testing keyup variations</h3>
 <ol>
     <li>
         <p>Syntax: <code>&lt;Input &#123;&#123;on "key-up" this.someAction&#125;&#125; /&gt;</code></p>
@@ -87,90 +72,79 @@
         <Input @key-up={{this.updateName}} id="at-key-up" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="keyup-cc">Event is keyUp</label>
         <Input keyUp={{this.updateName}} id="keyup-cc" />
     </li>
-</ol>
-<h3 id="no-keydown">Testing keydown variations</h3>
-<ol>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="at-keydown">Event is @keydown</label>
-        <Input @type="text" @keydown={{this.updateName}} id="at-keydown" />
+        <Input  @keydown={{this.updateName}} id="at-keydown" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="at-onkeydown">Event is @onkeydown</label>
-        <Input @type="text" @onkeydown={{this.updateName}} id="at-onkeydown" />
+        <Input  @onkeydown={{this.updateName}} id="at-onkeydown" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         {{!-- This does not work: uses on event name --}}
         <label for="at-onkeydown-cc">Event is @onKeyDown</label>
-        <Input @type="text" @onKeyDown={{this.updateName}} id="at-onkeydown-cc" />
+        <Input  @onKeyDown={{this.updateName}} id="at-onkeydown-cc" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         {{!-- not working --}}
         <label for="on-onkeydown">Event is on onkeydown</label>
-        <Input @type="text" {{on "onkeydown" this.updateName}} id="on-onkeydown" />
+        <Input  {{on "onkeydown" this.updateName}} id="on-onkeydown" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         {{!-- not working --}}
         <label for="on-onkeydown-cc">Event is on onKeyDown</label>
-        <Input @type="text" {{on "onKeyDown" this.updateName}} id="on-onkeydown-cc" />
+        <Input  {{on "onKeyDown" this.updateName}} id="on-onkeydown-cc" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="on-keydown-cc">Event is on keyDown</label>
-        <Input @type="text" {{on "keyDown" this.updateName}} id="on-keydown-cc" />
+        <Input  {{on "keyDown" this.updateName}} id="on-keydown-cc" />
     </li>
-</ol>
-<h3 id="no-enter">Testing enter variations</h3>
-<ol>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         <label for="on-enter">Event is on enter</label>
-        <Input @type="text" {{on "enter" this.updateName}} id="on-enter" />
+        <Input  {{on "enter" this.updateName}} id="on-enter" />
     </li>
     <li>
-        <p>Syntax:<code>&lt;Input /&gt;</code></p>
+        {{!-- <p>Syntax:<code>&lt;Input /&gt;</code></p> --}}
         {{!-- doesn't do anything --}}
         <label for="at-enter">Event is at enter</label>
-        <Input @type="text" @enter={{this.updateName}} id="at-enter" />
+        <Input  @enter={{this.updateName}} id="at-enter" />
     </li>
-</ol>
-<h3 id="no-escape">Testing "escape press" variations</h3>
-<ol>
-    <li class="broken">
+    <li>
         <p>Syntax:<code>&#123;&#123;input enter=this.someAction&#125;&#125;</code></p>
         {{!-- does not work --}}
         <label for="curly-enter-this">Event is enter plus this.someAction</label>
         {{input type="text" autocomplete="on" enter=this.updateName id="curly-enter-this"}}
     </li>      
-</ol>
-<ol>
     <li>
         {{!-- no --}}
         <label for="at-focus-in">Event is @focus-in</label>
-        <Input @type="text" @focus-in={{this.updateName}} id="at-focus-in" />
+        <Input  @focus-in={{this.updateName}} id="at-focus-in" />
     </li>
     <li>
         {{!-- no --}}
         <label for="at-focusin">Event is @focusin</label>
-        <Input @type="text" @focusin={{this.updateName}} id="at-focusin" />
+        <Input  @focusin={{this.updateName}} id="at-focusin" />
     </li>
     <li>
         {{!-- doesn't do anything --}}
         <label for="on-insert-newline">Event is on insert-newline</label>
-        <Textarea @type="text" {{on "insert-newline" this.updateName}} id="on-insert-newline" />
+        <Textarea  {{on "insert-newline" this.updateName}} id="on-insert-newline" />
     </li>
     <li>
         {{!-- doesn't do anything --}}
         <label for="on-escape-press">Event is on escape-press</label>
-        <Input @type="text" {{on "escape-press" this.updateName}} id="on-escape-press" />
+        <Input  {{on "escape-press" this.updateName}} id="on-escape-press" />
     </li>
     <li>
         {{!-- doesn't do anything --}}
@@ -190,59 +164,48 @@
     <li>
         {{!-- doesn't do anything --}}
         <label for="on-focus-in">Event is on focus-in</label>
-        <Input @type="text" {{on "focus-in" this.updateName}} id="firstname-013" />
+        <Input {{on "focus-in" this.updateName}} id="on-focus-in" />
     </li>
     <li>
         {{!-- doesn't do anything --}}
-        <label for="firstname-016">First Name 16</label>
-        <Input @type="text" {{on "focus-out" this.updateName}} id="firstname-016" />
+        <label for="on-focus-out">Event is on focus-out</label>
+        <Input  {{on "focus-out" this.updateName}} id="on-focus-out" />
     </li>
     <li>
         {{!-- doesn't do anything --}}
-        <label for="firstname-014">First Name key-press</label>
-        <Input @type="text" {{on "key-press" this.updateName}} id="firstname-014" />
+        <label for="on-key-press">Event is on key-press</label>
+        <Input  {{on "key-press" this.updateName}} id="on-key-press" />
     </li>
     <li>
         {{!-- does not work --}}
-        <label for="firstname-action-019">First Name Action 19 escape</label>
-        <Input @type="text" @escapePress={{action "updateName"}} id="firstname-action-019" />
+        <label for="at-escapepress-cc-plus-action">Event is @escapePress</label>
+        <Input  @escapePress={{action "updateName"}} id="at-escapepress-cc-plus-action" />
     </li>
 
     <li>
         {{!-- This does not work: uses dasherized event name --}}
-        <label for="firstname-003">First Name 3</label>
-        <Input @type="text" @key-press={{this.updateName}} id="firstname-003" />
-    </li>
-    <li>
-        {{!-- no --}}
-        <label for="on-focus-in">Event is on focus-in</label>
-        <Input @type="text" {{on "focus-in" this.updateName}} id="on-focus-in" />
+        <label for="at-key-press">Event is @key-press</label>
+        <Input  @key-press={{this.updateName}} id="at-key-press" />
     </li>
     <li>
         {{!-- no --}}
         <label for="at-focus-out">Event is @focus-out</label>
-        <Input @type="text" @focus-out={{this.updateName}} id="at-focus-out" />
+        <Input  @focus-out={{this.updateName}} id="at-focus-out" />
     </li>
     <li>
         {{!-- no --}}
         <label for="at-focusout">Event is @focusout</label>
-        <Input @type="text" @focusout={{this.updateName}} id="at-focusout" />
-    </li>
-    
-    <li>
-        {{!-- no --}}
-        <label for="on-focus-out">on-focus-out</label>
-        <Input @type="text" {{on "focus-out" this.updateName}} id="on-focus-out" />
+        <Input  @focusout={{this.updateName}} id="at-focusout" />
     </li>
     <li>
         {{!-- yes --}}
         <label for="on-focusin">Event is on focusin</label>
-        <Input @type="text" {{on "focusin" this.updateName}} id="on-focusin" />
+        <Input  {{on "focusin" this.updateName}} id="on-focusin" />
     </li>
     <li>
         {{!-- yes --}}
         <label for="on-focusout">Event is on focusout</label>
-        <Input @type="text" {{on "focusout" this.updateName}} id="on-focusout" />
+        <Input  {{on "focusout" this.updateName}} id="on-focusout" />
     </li>
 </ol>
 
